update service to accept list of gradeRecords
